--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,11 @@ a:hover {
     color: #D9594C;
 }
 
+#maincon {
+    margin:0;
+    padding:0;
+}
+
 /*Nav Bar*/
 .navbar {
     background-color: grey;
@@ -54,4 +59,14 @@ a:hover {
 
 .groupon {
     background-color: #b0f442;
+}
+
+/*Footer */
+#foot{
+    box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, .2);
+    border-top: 1px solid rgba(0, 0, 0, .2);
+}
+
+.page-footer{
+    margin:40px;
 }
