--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,11 +41,18 @@ a:hover {
     background-color:#D9594C;
     border-color:#D9594C;
     text-transform: uppercase;
+    color:white;
 }
 
 .btn:hover{
     background-color: #595F72;
     border-color:#595F72;
+}
+
+/*Map*/
+.mainmap {
+    border: 2px solid #D9594C;
+    box-shadow: -2px 5px 10px 5px rgba(0, 0, 0, .2);
 }
 
 /* Cards */
