--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ a{
 }
 
 a:hover {
-    color: #D9594C;
+    color: #fc503a;
 }
 
 #maincon {
@@ -58,19 +58,43 @@ a:hover {
 
 /*Nav Bar*/
 .navbar {
-    background-color: #fc503a;
+    background-color:#fc503a;
     position:fixed;
     width: 100%;
     z-index: 100;
     box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, .2);
 }
 
-.nav-item > a {
-    color: white;
-}
-
 .nav-link {
     text-transform: uppercase;
+    position: relative;
+    text-decoration:none;
+    color:white;
+}
+
+.nav-link:hover {
+    color:white;
+}
+
+.override .nav-link:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.override .nav-link:hover:before {
+    visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 .groupon {
@@ -124,6 +148,11 @@ a:hover {
     font-weight: 700;
 }
 
+.jumbotron h3 {
+    font-family:'Montserrat',sans-serif;
+    font-style: italic;
+}
+
 .jumbotron p:nth-child(2){
     font-family: 'Open Sans', sans-serif;
 }
@@ -131,6 +160,7 @@ a:hover {
 /*Accordian*/
 .override .cordbtn {
     font-family: 'Montserrat', sans-serif;
+    position:relative;
     font-weight:700;
     font-size:2rem;
     text-decoration: none;
@@ -138,6 +168,27 @@ a:hover {
     border:none;
     color: rgb(33,37,41);
 } 
+
+.override .cordbtn:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.5s ease-in-out 0s;
+}
+
+.override .cordbtn:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
 
 .override #accordion .list-group-item{
     background-color: rgba(0,0,0,0);
@@ -221,43 +272,33 @@ blogcard,
 }
 
 /*Instagram Feed*/
-#scroller {
-        position: relative;
-    }
-    #scroller .innerScrollArea {
-        overflow: hidden;
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-    }
-    #scroller ul {
-        padding: 0;
-        margin: 0;
-        position: relative;
-    }
-    #scroller li {
-        padding: 0;
-        list-style-type: none;
-        position: absolute;
-    }
 
-/*Footer */
-.foot{
-    color: white;
-    background-color:#fc503a;
+.override .instafeed .thumbnail{
     box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, .5);
 }
 
-.foot .form-text{
+/*Footer */
+.override .foot{
+    background-color:#fc503a;
+    box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, .5);
     color:white;
 }
 
-.list-inline-item a {
+.override .foot a{
+    color:white;
+}
+
+.fa-facebook,
+.fa-instagram,
+.fa-twitter,
+.fa-youtube{
     color: #4ABDAC;
 }
+
+.fa-facebook:hover,
+.fa-instagram:hover,
+.fa-twitter:hover,
+.fa-youtube:hover,
 .list-inline-item a:hover{
     color: #F7B733;
-
 }
