--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ a:hover {
 }
 
 .navbar-toggler-icon{
-    background-color: blue;
+    background-color:#4ABDAC;
     background-image: none;
     border: 1px solid transparent;
 }
