--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,6 +272,8 @@ blogcard,
     opacity: 0;
     background-color: rgba(0,0,0,.8);
     overflow: hidden;
+	width:100%;
+	height:100%;
 }
 
 .override .bloglay:hover {
