--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,15 @@ a:hover {
     margin:0;
 }
 
+.override .navbar-nav .dropdown .dropdown-menu:first-of-type{
+  width:800px;
+  height:auto;
+}
+
+.override .navbar-nav .dropdown .dropdown-menu .col:not(:last-child){
+  border-right: 1px solid rgba(0,0,0,.5);
+}
+
 /*Responsive Article Gallery*/
 
 .cssrow {
@@ -289,7 +298,7 @@ blogcard,
 }
 
 .blogcard {
-    border:0;
+    border:5px solid #4ABDAC;
 	width: 100%;
 	height: auto;
 }
